--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,7 @@
 @import 'layout/header';
 @import 'pages/home';
 @import 'pages/room';
+@import 'pages/preview';
 @import 'components/card';
 @import 'components/button';
 @import 'components/carousel';
