room and preview done

--- a/assets/view/preview.html
+++ b/assets/view/preview.html
@@ -8,6 +8,8 @@
     <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-straight/css/uicons-regular-straight.css'>
+
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
     <script defer src="/assets/js/main.js"></script>
     <title>La Ferme Rose - Hôtel de charme à Moustier-Sainte-Marie</title>
@@ -41,13 +43,303 @@
     </header>
     <main>
         <div id="hero" class="hero-view"></div>
-        <div id="about" class="about-view">
+        <section id="about" class="about-view">
             <div class="about-content-view">
-                <a href="" class="link-return"> < Voir toutes les chambres</a>
-                <h1>Chambre Amande</h1>
+                <a href="room.html" class="link-return"> < Voir toutes les chambres</a>
+                <h1>Chambre Amande | Lit Queen size</h1>
                 <p>Chambre authentique avec carreaux en terre cuite Salernes, mobilier style naturel sous une jolie charpente de toit apparente, créée et installé par un compagnon de Provence. Une grande salle de bains avec baignoire-bassin en faïence de Salernes de couleur amande. </p>
-                
             </div>
+        </section>
+        <content class="room-detail">
+            <div class="room-detail-wrap">
+                <h2>Détails</h2>
+                <p>Situé au dernier étage, la chambre se trouve dans l'aile de l'ancien batiment et dispose d'une térrase solarium. Inspirée de la vue sur les collines environnantes, la décoration marie les faïence de Salernes et touche provence, telle qu'un mobilier authentique et de magnifiques soieries, tandis qu'une selection de meuble provenant de l'impressionante collection du propriétaire, Kako.</p>
+                <h3>Lit queen size | 2 personnes | Vue sur les collines environnantes</h3>
+                <div class="room-highlight">
+                    <div class="room-character-list">
+                    <h4>Caractéristiques : </h4>
+                        <ul class="room-character">
+                            <li>
+                                <img class="room-icon" src="/assets/img/icons/terrace.png" alt="terrace-icon">
+                                <p>Petit balcon</p>
+                            </li>
+                            <li>
+                                <img class="room-icon" src="/assets/img/icons/antique-balcony.png" alt="balcony-icon">
+                                <p>Terrase</p>
+                            </li>
+                        </ul>
+                    </div>
+                    
+                    <div class="room-service-list">
+                    <h4>Prestations incluses :</h4>
+                        <div class="room-service-wrap">
+                            <ul class="room-service">
+                                <li>
+                                    <img class="room-icon" src="/assets/img/icons/wifi.png" alt="wifi-icon">
+                                    <p>Wi-fi</p>
+                                </li>
+                                <li>
+                                    <img class="room-icon" src="/assets/img/icons/freezing.png" alt="aircon-icon">
+                                    <p>Climatisation</p>
+                                </li>
+                            </ul>
+                            <ul class="room-service">
+                                <li>
+                                    <img class="room-icon" src="/assets/img/icons/bathtub.png" alt="bathroom-icon">
+                                    <p>Salle de bain privative</p>
+                                </li>
+                                <li>
+                                    <img class="room-icon" src="/assets/img/icons/telephone.png" alt="phone-icon"> 
+                                    <p>Téléphone avec ligne directe</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </content>
+        <article class="room-photo-gallery">
+            <div class="gallery-wrap">
+                <div class="col-left">
+                    <h2>Photo Gallery</h2>
+                </div>
+                <div class="photo-gallery carousel-wrap">
+                    <div class="carousel">
+                        <button class="carousel__button carousel__button--left is-hidden">
+                            <img src="/assets/img/icons/previous-fill.png" alt="">
+                        </button>
+                        <div class="carousel__track-container">
+                            <ul class="carousel__track">
+                                <li class="carousel__slide current-slide">
+                                    <img class="carousel__image" src="/assets/img/chamande1.jpg" alt="">
+                                </li>
+                                <li class="carousel__slide">
+                                    <img class="carousel__image" src="/assets/img/chamande2.jpg" alt="">
+                                </li>
+                                <li class="carousel__slide">
+                                    <img class="carousel__image" src="/assets/img/chamande3.jpg" alt="">
+                                </li>
+                            </ul>
+                        </div>
+                        <button class="carousel__button carousel__button--right">
+                            <img src="/assets/img/icons/next-fill.png" alt="">
+                        </button>
+                        <div class="carousel__nav">
+                            <button class="carousel__indicator current-slide"></button>
+                            <button class="carousel__indicator"></button>
+                            <button class="carousel__indicator"></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </article>
+        <div class="suggestion">
+            <div class="suggestion-wrap">
+            <h2>Vous apprécierez aussi</h2>
+            <div class="scrolling-wrapper">
+                <div class="room-item">
+                    <div class="room-image carousel-wrap">
+                        <div class="carousel">
+                            <button class="carousel__button carousel__button--left is-hidden">
+                                <img src="/assets/img/icons/previous-fill.png" alt="">
+                            </button>
+                            <div class="carousel__track-container">
+                                <ul class="carousel__track">
+                                    <li class="carousel__slide current-slide">
+                                        <img class="carousel__image" src="/assets/img/chemera3.jpg" alt="">
+                                    </li>
+                                    <li class="carousel__slide">
+                                        <img class="carousel__image" src="/assets/img/chemera1.png" alt="">
+                                    </li>
+                                    <li class="carousel__slide">
+                                        <img class="carousel__image" src="/assets/img/chemera2.png" alt="">
+                                    </li>
+                                </ul>
+                            </div>
+                            <button class="carousel__button carousel__button--right">
+                                <img src="/assets/img/icons/next-fill.png" alt="">
+                            </button>
+                            <div class="carousel__nav">
+                                <button class="carousel__indicator current-slide"></button>
+                                <button class="carousel__indicator"></button>
+                                <button class="carousel__indicator"></button>
+                            </div>
+                        </div>
+                    </div>  
+                    <div class="room-content">
+                        <div class="room-title">
+                            <h3>Chambre Emeraude avec double balcon</h3>
+                        </div>
+                        <div class="room-description">
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni, recusandae error, nobis accusamus, quam id necessitatibus aliquid quo nam nemo unde voluptates debitis dolor aspernatur.</p>
+                        </div>  
+                        <div class="room-benefits">
+                            <div class="room-benefits-label">
+                                <h4>Prestation incluses :</h4>
+                            </div>
+                            <div class="room-benefits-list">
+                                <ul>
+                                    <li>
+                                        <img src="/assets/img/icons/wifi.png" alt="wifi-icon">
+                                        <p>Wi-fi</p>
+                                    </li>
+                                    <li>
+                                        <img src="/assets/img/icons/freezing.png" alt="aircon-icon">
+                                        <p>Climatisation</p>
+                                    </li>
+                                    <li>
+                                        <img src="/assets/img/icons/bathtub.png" alt="bathroom-icon">
+                                        <p>Salle de bain privative</p>
+                                        
+                                    </li>
+                                    <li>
+                                        <img src="/assets/img/icons/telephone.png" alt="phone-icon"> 
+                                        <p>Téléphone avec ligne directe</p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="room-utility">
+                            <a href="#" class="btn btn-info">En savoir plus</a>   
+                        </div>
+                    </div>
+                </div>
+                <div class="room-item">
+                    <div class="room-image carousel-wrap">
+                        <div class="carousel">
+                            <button class="carousel__button carousel__button--left is-hidden">
+                                <img src="/assets/img/icons/previous-fill.png" alt="">
+                            </button>
+                            <div class="carousel__track-container">
+                                <ul class="carousel__track">
+                                    <li class="carousel__slide current-slide">
+                                        <img class="carousel__image" src="/assets/img/chamande1.jpg" alt="">
+                                    </li>
+                                    <li class="carousel__slide">
+                                        <img class="carousel__image" src="/assets/img/chamande2.jpg" alt="">
+                                    </li>
+                                    <li class="carousel__slide">
+                                        <img class="carousel__image" src="/assets/img/chamande3.jpg" alt="">
+                                    </li>
+                                </ul>
+                            </div>
+                            <button class="carousel__button carousel__button--right">
+                                <img src="/assets/img/icons/next-fill.png" alt="">
+                            </button>
+                            <div class="carousel__nav">
+                                <button class="carousel__indicator current-slide"></button>
+                                <button class="carousel__indicator"></button>
+                                <button class="carousel__indicator"></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="room-content">
+                        <div class="room-title">
+                            <h3>Chambre Amande avec terrasse</h3>
+                        </div>
+                        <div class="room-description">
+                            <p>Chambre authentique avec carreaux en terre cuite Salernes, mobilier style naturel sous une jolie charpente de toit apparente, créée et installé par un compagnon de Provence. Une grande salle de bains avec baignoire-bassin en faïence de Salernes de couleur amande. </p>
+                        </div>  
+                        <div class="room-benefits">
+                            <div class="room-benefits-label">
+                                <h4>Prestation incluses :</h4>
+                            </div>
+                            <div class="room-benefits-list">
+                                <ul>
+                                    <li>
+                                        <img src="/assets/img/icons/wifi.png" alt="wifi-icon">
+                                        <p>Wi-fi</p>
+                                    </li>
+                                    <li>
+                                        <img src="/assets/img/icons/freezing.png" alt="aircon-icon">
+                                        <p>Climatisation</p>
+                                    </li>
+                                    <li>
+                                        <img src="/assets/img/icons/bathtub.png" alt="bathroom-icon">
+                                        <p>Salle de bain privative</p>
+                                        
+                                    </li>
+                                    <li>
+                                        <img src="/assets/img/icons/telephone.png" alt="phone-icon"> 
+                                        <p>Téléphone avec ligne directe</p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="room-utility">
+                            <a href="preview.html" class="btn btn-info">En savoir plus</a>   
+                        </div>
+                    </div>
+                </div>
+                <div class="room-item">
+                    <div class="room-image carousel-wrap">
+                        <div class="carousel">
+                            <button class="carousel__button carousel__button--left is-hidden">
+                                <img src="/assets/img/icons/previous-fill.png" alt="">
+                            </button>
+                            <div class="carousel__track-container">
+                                <ul class="carousel__track">
+                                    <li class="carousel__slide current-slide">
+                                        <img class="carousel__image" src="/assets/img/chemera3.jpg" alt="">
+                                    </li>
+                                    <li class="carousel__slide">
+                                        <img class="carousel__image" src="/assets/img/chemera1.png" alt="">
+                                    </li>
+                                    <li class="carousel__slide">
+                                        <img class="carousel__image" src="/assets/img/chemera2.png" alt="">
+                                    </li>
+                                </ul>
+                            </div>
+                            <button class="carousel__button carousel__button--right">
+                                <img src="/assets/img/icons/next-fill.png" alt="">
+                            </button>
+                            <div class="carousel__nav">
+                                <button class="carousel__indicator current-slide"></button>
+                                <button class="carousel__indicator"></button>
+                                <button class="carousel__indicator"></button>
+                            </div>
+                        </div>
+                    </div>  
+                    <div class="room-content">
+                        <div class="room-title">
+                            <h3>Chambre Emeraude avec double balcon</h3>
+                        </div>
+                        <div class="room-description">
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni, recusandae error, nobis accusamus, quam id necessitatibus aliquid quo nam nemo unde voluptates debitis dolor aspernatur.</p>
+                        </div>  
+                        <div class="room-benefits">
+                            <div class="room-benefits-label">
+                                <h4>Prestation incluses :</h4>
+                            </div>
+                            <div class="room-benefits-list">
+                                <ul>
+                                    <li>
+                                        <img src="/assets/img/icons/wifi.png" alt="wifi-icon">
+                                        <p>Wi-fi</p>
+                                    </li>
+                                    <li>
+                                        <img src="/assets/img/icons/freezing.png" alt="aircon-icon">
+                                        <p>Climatisation</p>
+                                    </li>
+                                    <li>
+                                        <img src="/assets/img/icons/bathtub.png" alt="bathroom-icon">
+                                        <p>Salle de bain privative</p>
+                                        
+                                    </li>
+                                    <li>
+                                        <img src="/assets/img/icons/telephone.png" alt="phone-icon"> 
+                                        <p>Téléphone avec ligne directe</p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="room-utility">
+                            <a href="#" class="btn btn-info">En savoir plus</a>   
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
     </main>
     <footer>
