--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&family=Lato:wght@100;300;400;700&display=swap");
-.about, .logo-area, .room, .about-view {
+.about, .logo-area, .room, .about-view, .room-detail, .room-photo-gallery, .suggestion {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1123,8 +1123,8 @@ input:focus, textarea:focus {
 }
 
 .about-view {
-  min-height: 30vh;
-  padding: 3rem;
+  min-height: 40vh;
+  padding: 2rem 3rem;
   background-color: #fafafa;
 }
 
@@ -1152,6 +1152,166 @@ input:focus, textarea:focus {
   font-weight: 400;
   width: 80%;
   margin-bottom: 1.2rem;
+}
+
+.room-detail {
+  background-color: #f5efeb;
+  min-height: 50vh;
+  padding: 3rem;
+}
+
+.room-detail-wrap {
+  max-width: 80rem;
+  font-family: "Tinos", serif;
+  color: #353535;
+}
+
+.room-detail-wrap h2 {
+  font-size: 3rem;
+  font-weight: 500;
+  margin: 1.5rem 0;
+}
+
+.room-detail-wrap h3 {
+  font-size: 2rem;
+  font-weight: 500;
+}
+
+.room-detail-wrap h4 {
+  font-size: 1.2rem;
+  font-weight: 400;
+}
+
+.room-detail-wrap p {
+  width: 80rem;
+  font-size: 1.2rem;
+  font-weight: 300;
+  width: 80%;
+  margin-bottom: 1.2rem;
+}
+
+.room-highlight {
+  margin-top: 3rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 15rem;
+  color: #5b5b5b;
+}
+
+.room-character {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 2rem;
+}
+
+.room-character li, .room-service li {
+  list-style: none;
+  margin-bottom: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.room-character li p, .room-service li p {
+  font-size: 1rem;
+}
+
+.room-character-list, .room-service-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 2rem;
+}
+
+.room-character-list .room-service-wrap, .room-service-list .room-service-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10rem;
+}
+
+.room-icon {
+  margin-right: 1rem;
+  width: 1.8rem;
+  height: 1.8rem;
+}
+
+.room-photo-gallery {
+  background-color: #fafafa;
+  min-height: 80vh;
+  padding: 3rem;
+}
+
+.gallery-wrap {
+  max-width: 100rem;
+  font-family: "Tinos", serif;
+  color: #353535;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 4rem;
+}
+
+.gallery-wrap h2 {
+  position: relative;
+  font-weight: 500;
+  font-size: 2.5rem;
+  text-align: left;
+  margin-bottom: 3rem;
+}
+
+.gallery-wrap h2::before {
+  content: "";
+  width: 5rem;
+  height: 2px;
+  background-color: #cb9d75;
+  position: absolute;
+  top: 40%;
+  left: -100px;
+}
+
+.photo-gallery {
+  height: 60vh;
+  width: 40vw;
+}
+
+.suggestion {
+  background-color: #f5efeb;
+  min-height: 80vh;
+  padding: 3rem;
+}
+
+.suggestion-wrap {
+  max-width: 70vw;
+  font-family: "Tinos", serif;
+  color: #353535;
+}
+
+.suggestion-wrap h2 {
+  font-size: 5rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+}
+
+.scrolling-wrapper {
+  width: 70vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  overflow-x: auto;
+  gap: 2rem;
+}
+
+.room-item {
+  min-width: 40rem;
 }
 
 .card {
