--- a/assets/view/room.html
+++ b/assets/view/room.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-straight/css/uicons-regular-straight.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
     <script defer src="/assets/js/main.js"></script>
     <title>La Ferme Rose - Hôtel de charme à Moustier-Sainte-Marie</title>
