--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,5 +1,5 @@
 footer{
-    
+    border-top: 1px solid $rose;
     background-color: $grey;
     color: $main-txt-dark;
     font-family: $main-font;
