--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,7 @@
 @import 'pages/home';
 @import 'pages/room';
 @import 'pages/preview';
+@import 'pages/gallery';
 @import 'components/card';
 @import 'components/button';
 @import 'components/carousel';
